--- a/examples/todo-mvc/package.json
+++ b/examples/todo-mvc/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "author": "Fabien O'Carroll <fabien@allou.is>",
   "scripts": {
-    "build": "browserify --debug -e js/main.js -o js/bundle.js",
+    "build-dev": "browserify --debug -e js/main.js -o js/bundle.js",
+    "build": "browserify -e js/main.js -t yo-yoify -o js/bundle.js",
     "watch": "watchify --debug -e js/main.js -o js/bundle.js"
   },
   "dependencies": {
@@ -17,6 +18,7 @@
   },
   "devDependencies": {
     "browserify": "13.0.0",
-    "watchify": "3.7.0"
+    "watchify": "3.7.0",
+    "yo-yoify": "1.0.3"
   }
 }
