--- a/fab-app/package.json
+++ b/fab-app/package.json
@@ -12,6 +12,7 @@
     "copy-event-attributes": "github:allouis/copy-event-attributes",
     "duplexify": "3.4.3",
     "morphdom": "1.3.0",
+    "readable-stream": "2.1.0",
     "through2": "2.0.1"
   }
 }
